# resume-cli

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
resume/: __init__.py  cli.py  diff.py  git_analysis.py  onboarding.py  plan.py  storage.py  story.py  stream.py  summarizer.py  tts.py  utils.py  watch.py  workspace.py
resume/session/: __init__.py  session_analyzer.py  session_cluster.py
resume/ui/: __init__.py  components.py  renderer.py  select.py
